@@ -51,7 +51,7 @@ public class SavedCasesController {
             @RequestParam(defaultValue = "0") int skip,
             @RequestParam(defaultValue = "20") int take) {
         UUID userId = currentUser.requiredUserId(request);
-        int safeTake = Math.min(Math.max(take, 1), 50);
+        int safeTake = Math.clamp(take, 1, 50);
         return ResponseEntity.ok(ApiResponse.ok(
                 savedCaseService.getSavedCases(userId, skip, safeTake)));
     }
@@ -83,7 +83,7 @@ public class SavedCasesController {
             @RequestParam(defaultValue = "0") int skip,
             @RequestParam(defaultValue = "20") int take) {
         UUID userId = currentUser.requiredUserId(request);
-        int safeTake = Math.min(Math.max(take, 1), 50);
+        int safeTake = Math.clamp(take, 1, 50);
         return ResponseEntity.ok(ApiResponse.ok(
                 savedCaseService.getSharedCases(userId, skip, safeTake)));
     }
